# qr_code

./: .gitignore  Cargo.toml  README.md
.github/workflows/: fuzz.yml  rust.yml  test.yml
examples/: decode_bmp.rs  encode_bmp.rs  encode_image.rs  encode_string.rs  encode_svg.rs
fuzz/: Cargo.toml  fuzz.sh
fuzz/artifacts/decode_check/: crash-045dc09e6d00cfd6d3b3e9a4cfe5835e410c5fd1
fuzz/artifacts/encode/: crash-9ffe42701f80d18e9c114f1134b9d64045f7d5ce
fuzz/artifacts/split_merge_rt/: crash-1e272488adbe45a04a14b1a2b848997ff64e1b74
fuzz/fuzz_targets/: decode_check.rs  encode.rs  fuzz_target_decode.rs  fuzz_target_decode_check.rs  fuzz_target_encode.rs  fuzz_target_rt.rs  split_merge_rt.rs
src/: bits.rs  canvas.rs  cast.rs  ec.rs  fuzz.rs  lib.rs  optimize.rs  render.rs  structured.rs  types.rs
src/decode/: bmp_grid.rs  decode.rs  g2p.rs  g2poly.rs  gf16.rs  gf256.rs  mod.rs  version_db.rs
src/render/: image.rs  mod.rs  string.rs  svg.rs  unicode.rs
