[package]
name = "qr_code"
description = "QR code encoder in Rust, support structured append (data in multiple qrcodes)"
license = "MIT OR Apache-2.0"
version = "0.18.0"
edition = "2018"
authors = ["kennytm <kennytm@gmail.com>", "Riccardo Casatta <riccardo.casatta@gmail.com>"]
keywords = ["qrcode"]
repository = "https://github.com/RCasatta/qr_code"
readme = "README.md"
documentation = "http://docs.rs/qr_code"
exclude = [
    ".github", ".gitignore", ".idea"
]

[dependencies]
bmp-monochrome = { version = "0.15.0", default-features = false, optional = true }

[dev-dependencies]
rand = "0.7.3"

[features]
bmp = ["bmp-monochrome"]

[[example]]
name = "encode_string"

[[example]]
name = "encode_bmp"
required-features = ["bmp"]

[[example]]
name = "decode_bmp"
required-features = ["bmp"]

[package.metadata.docs.rs]
features = ["bmp"]
rustdoc-args = ["--cfg", "docsrs"]
